Fix vertical alignment of columns

--- a/identity-graph-intelligence/public/stylesheets/style.css
+++ b/identity-graph-intelligence/public/stylesheets/style.css
@@ -19,20 +19,28 @@ a {
 
 #container {
     width: 100%;
+    height: 85vh;
+    max-height: 85vh;
     overflow:hidden;
     display:table;
 }
-#graphContainer {
+#graphColumn {
     display:table-cell;
+    height: 85vh;
+    vertical-align: top;
+}
+#graphContainer {
+    display:block;
     border: 1px dotted #107E92;
     height: 85vh;
+    vertical-align: top;
 }
 #metricsColumn {
     border: 1px dotted #107E92;
     display:table-cell;
     width: 400px;
     max-width: 400px;
-    overflow: hidden;
+    vertical-align: top;
 }
 #metricsContainer {
     border: 1px dotted #107E92;
@@ -41,13 +49,21 @@ a {
     max-width: 400px;
     height: 85vh;
     overflow: scroll;
+    vertical-align: top;
+}
+#entityColumn {
+    display:table-cell;
+    height: 85vh;
+    width: 400px;
+    max-width: 400px;
+    vertical-align: top;
 }
 #entityContainer  {
     border: 1px dotted #107E92;
-    display:table-cell;
-    width: 400px;
-    height: 85vh;
+    display:block;
     overflow: scroll;
+    height: 85vh;
+    vertical-align: top;
 }
 
 #header {
